really fix background on mobile and tablet

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-color: rgb(39, 39, 39);
   background-image: url("./images/portfolio-main.jpg");
+  background-repeat: no-repeat;
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,6 +11,12 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media screen and (min-width: 992px) {
+  body {
+    background-attachment: fixed;
+  }
 }
 
 h1 {
